# statmon

./: .gitignore  Makefile  Makefile.am  autogen.sh  configure  configure.ac  measure.cfg  runMonitor.sh  statmon.cpp  statmon.hpp
examples/: all.cfg  oneMetric.cfg  oneNic.cfg  oneNicOneMetric.cfg
scripts/: analyzeMonitor.py  analyzeResults.py
